feat: Security, Cookies